@@ -15,24 +15,27 @@
  * limitations under the License.
  */
 
-package org.keycloak.models.workflow;
+package org.keycloak.models.workflow.user;
 
-import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 import org.keycloak.Config;
 import org.keycloak.component.ComponentModel;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
+import org.keycloak.models.workflow.ResourceType;
+import org.keycloak.models.workflow.WorkflowStepProviderFactory;
 import org.keycloak.provider.ProviderConfigProperty;
 
-public class NotifyUserStepProviderFactory implements WorkflowStepProviderFactory<NotifyUserStepProvider> {
+public class DisableUserStepProviderFactory implements
+    WorkflowStepProviderFactory<DisableUserStepProvider> {
 
-    public static final String ID = "notify-user";
+    public static final String ID = "disable-user";
 
     @Override
-    public NotifyUserStepProvider create(KeycloakSession session, ComponentModel model) {
-        return new NotifyUserStepProvider(session, model);
+    public DisableUserStepProvider create(KeycloakSession session, ComponentModel model) {
+        return new DisableUserStepProvider(session, model);
     }
 
     @Override
@@ -56,29 +59,17 @@ public class NotifyUserStepProviderFactory implements WorkflowStepProviderFactor
     }
 
     @Override
-    public ResourceType getType() {
-        return ResourceType.USERS;
+    public Set<ResourceType> getTypes() {
+        return Set.of(ResourceType.USERS);
     }
 
     @Override
     public String getHelpText() {
-        return "Sends email notifications to users based on configurable templates";
+        return "";
     }
 
     @Override
     public List<ProviderConfigProperty> getConfigProperties() {
-        return Arrays.asList(
-            new ProviderConfigProperty("reason", "Reason", 
-                "Reason for the action (inactivity, workflow violation, compliance requirement)", 
-                ProviderConfigProperty.STRING_TYPE, ""),
-
-            new ProviderConfigProperty("custom_subject_key", "Custom Subject Message Key", 
-                "Override default subject with custom message property key (optional)", 
-                ProviderConfigProperty.STRING_TYPE, ""),
-
-            new ProviderConfigProperty("custom_message", "Custom Message", 
-                "Override default message with custom text (optional)", 
-                ProviderConfigProperty.TEXT_TYPE, "")
-        );
+        return List.of();
     }
 }
