@@ -15,23 +15,28 @@
  * limitations under the License.
  */
 
-package org.keycloak.models.workflow;
+package org.keycloak.models.workflow.user;
 
+import java.util.Arrays;
 import java.util.List;
+import java.util.Set;
 
 import org.keycloak.Config;
 import org.keycloak.component.ComponentModel;
 import org.keycloak.models.KeycloakSession;
 import org.keycloak.models.KeycloakSessionFactory;
+import org.keycloak.models.workflow.ResourceType;
+import org.keycloak.models.workflow.WorkflowStepProviderFactory;
 import org.keycloak.provider.ProviderConfigProperty;
 
-public class DisableUserStepProviderFactory implements WorkflowStepProviderFactory<DisableUserStepProvider> {
+public class NotifyUserStepProviderFactory implements
+    WorkflowStepProviderFactory<NotifyUserStepProvider> {
 
-    public static final String ID = "disable-user";
+    public static final String ID = "notify-user";
 
     @Override
-    public DisableUserStepProvider create(KeycloakSession session, ComponentModel model) {
-        return new DisableUserStepProvider(session, model);
+    public NotifyUserStepProvider create(KeycloakSession session, ComponentModel model) {
+        return new NotifyUserStepProvider(session, model);
     }
 
     @Override
@@ -55,17 +60,29 @@ public class DisableUserStepProviderFactory implements WorkflowStepProviderFacto
     }
 
     @Override
-    public ResourceType getType() {
-        return ResourceType.USERS;
+    public Set<ResourceType> getTypes() {
+        return Set.of(ResourceType.USERS);
     }
 
     @Override
     public String getHelpText() {
-        return "";
+        return "Sends email notifications to users based on configurable templates";
     }
 
     @Override
     public List<ProviderConfigProperty> getConfigProperties() {
-        return List.of();
+        return Arrays.asList(
+            new ProviderConfigProperty("reason", "Reason", 
+                "Reason for the action (inactivity, workflow violation, compliance requirement)", 
+                ProviderConfigProperty.STRING_TYPE, ""),
+
+            new ProviderConfigProperty("custom_subject_key", "Custom Subject Message Key", 
+                "Override default subject with custom message property key (optional)", 
+                ProviderConfigProperty.STRING_TYPE, ""),
+
+            new ProviderConfigProperty("custom_message", "Custom Message", 
+                "Override default message with custom text (optional)", 
+                ProviderConfigProperty.TEXT_TYPE, "")
+        );
     }
 }
